Fix animation on mobile

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,10 +2,14 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 25px 50px;
+    padding: 2.5rem 5rem;
     font-family: Montserrat-Regular;
     font-size: 1rem;
     border-top: 1px solid #3D3E40;
+
+    @media screen and (max-width: 1280px) {
+        padding: 2rem 3.5rem;
+    }
   
     .left {
         display: flex;
@@ -24,8 +28,8 @@
             line-height: 11px;
             text-decoration: none;
 
-            @media screen and (max-width: 1120px) {
-                margin: 5px 0 0 35px;
+            @media screen and (max-width: 1280px) {
+                margin: 5px 0 0 3.5rem;
             }
 
             &:hover {
