--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -314,7 +314,6 @@ main {
         .left-content {
             display: flex;
             width: 100%;
-            height: calc(100vh - 102px);
 
             @media screen and (min-width: 760px) and (max-width: 1024px) {
                 display: none;
